Twenty Twelve: set `color` values to black to ensure full text color contrast in print styles. Props miqrogroove, fixes #22797.
git-svn-id: http://core.svn.wordpress.org/trunk@23116 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -1616,6 +1616,7 @@ img#wpstats {
 @media print {
 	body {
 		background: none !important;
+		color: #000;
 		font-size: 10pt;
 	}
 	footer a[rel=bookmark]:link:after,
@@ -1650,8 +1651,13 @@ img#wpstats {
 		text-align: left;
 	}
 	.site-header h2 {
+		color: #000;
 		font-size: 10pt;
 		text-align: left;
+	}
+	.site-header h1 a,
+	.site-header h2 a {
+		color: #000;
 	}
 	.author-avatar,
 	#colophon,
